--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -10,6 +10,8 @@
 \newif\ifslotserver
 \slotservertrue
 
+\newcommand{\fullcite}[1]{\citeauthor{#1}~\cite{#1}}
+
 %%%%%%%%%%%%%%%%
 %%% NOTATION %%%
 %%%%%%%%%%%%%%%%
