--- a/paper/main.bib
+++ b/paper/main.bib
@@ -120,6 +120,72 @@
   note      = {Extended version available at \url{http://www.kb.ecei.tohoku.ac.jp/~koba/papers/tutorial-type-extended.pdf}},
 }
 
+@inproceedings{ZalakainDardha21,
+  author       = {Uma Zalakain and
+                  Ornela Dardha},
+  editor       = {Kirstin Peters and
+                  Tim A. C. Willemse},
+  title        = {{\(\pi\)} with Leftovers: {A} Mechanisation in Agda},
+  booktitle    = {Formal Techniques for Distributed Objects, Components, and Systems
+                  - 41st {IFIP} {WG} 6.1 International Conference, {FORTE} 2021, Held
+                  as Part of the 16th International Federated Conference on Distributed
+                  Computing Techniques, DisCoTec 2021, Valletta, Malta, June 14-18,
+                  2021, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {12719},
+  pages        = {157--174},
+  publisher    = {Springer},
+  year         = {2021},
+  doi          = {10.1007/978-3-030-78089-0\_9},
+}
+
+@article{JacobsBalzerKrebbers22,
+  author       = {Jules Jacobs and
+                  Stephanie Balzer and
+                  Robbert Krebbers},
+  title        = {Connectivity graphs: a method for proving deadlock freedom based on
+                  separation logic},
+  journal      = {Proc. {ACM} Program. Lang.},
+  volume       = {6},
+  number       = {{POPL}},
+  pages        = {1--33},
+  year         = {2022},
+  doi          = {10.1145/3498662},
+}
+
+@inproceedings{ZackonEtAl25,
+  author       = {Daniel Zackon and
+                  Chuta Sano and
+                  Alberto Momigliano and
+                  Brigitte Pientka},
+  editor       = {Kathrin Stark and
+                  Amin Timany and
+                  Sandrine Blazy and
+                  Nicolas Tabareau},
+  title        = {Split Decisions: Explicit Contexts for Substructural Languages},
+  booktitle    = {Proceedings of the 14th {ACM} {SIGPLAN} International Conference on
+                  Certified Programs and Proofs, {CPP} 2025, Denver, CO, USA, January
+                  20-21, 2025},
+  pages        = {257--271},
+  publisher    = {{ACM}},
+  year         = {2025},
+  doi          = {10.1145/3703595.3705888},
+}
+
+@article{SanoKavanaghPientka23,
+  author       = {Chuta Sano and
+                  Ryan Kavanagh and
+                  Brigitte Pientka},
+  title        = {Mechanizing Session-Types using a Structural View: Enforcing Linearity
+                  without Linearity},
+  journal      = {Proc. {ACM} Program. Lang.},
+  volume       = {7},
+  number       = {{OOPSLA2}},
+  pages        = {374--399},
+  year         = {2023},
+  doi          = {10.1145/3622810},
+}
+
 @inproceedings{CarboneEtAl24,
   author       = {Marco Carbone and
                   David Castro{-}Perez and
