--- a/paper/main.tex
+++ b/paper/main.tex
@@ -1,5 +1,6 @@
 \documentclass[pdflatex,sn-mathphys-num]{sn-jnl}
 
+\usepackage{graphicx}
 \usepackage{amsmath,amssymb,amsfonts}
 \usepackage{amsthm}
 \usepackage{xcolor}
