--- a/paper/related.tex
+++ b/paper/related.tex
@@ -115,3 +115,5 @@ squeezed spazi (in generale sono significativi)
         \textbf{38}
     \end{tabular}
 \end{table}
+
+paper di Marco a ECOOP (multiparty)
