restructuring presentation with new code

--- a/paper/Context.tex
+++ b/paper/Context.tex
@@ -154,7 +154,8 @@ in $\Context$ we use one of the prefix operators \AgdaInductiveConstructor{<}
 and \AgdaInductiveConstructor{>} to indicate whether the type is meant to be
 placed in $\ContextD$ or $\ContextE$, respectively.
 %
-As an example, below is the splitting of the context $[A, B, C, D]$ into $[B] + [A, C, D]$.
+As an example, below is the splitting of the context $[A, B, C, D]$ into $[B] +
+[A, C, D]$.
 
 \begin{code}[hide]%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
