--- a/paper/main.tex
+++ b/paper/main.tex
@@ -27,6 +27,13 @@
 \newunicodechar{⊗}{\ensuremath{\Ten}}
 \newunicodechar{⅋}{\ensuremath{\Par}}
 \newunicodechar{∀}{\ensuremath{\forall}}
+\newunicodechar{∩}{\ensuremath\cap}
+\newunicodechar{⋂}{\ensuremath\bigcap}
+\newunicodechar{∶}{\ensuremath{:}}
+\newunicodechar{∪}{\ensuremath\cup}
+\newunicodechar{⊢}{\ensuremath\vdash}
+\newunicodechar{∈}{\ensuremath\in}
+\newunicodechar{×}{\ensuremath\times}
 \newunicodechar{′}{\ensuremath{'}}
 \newunicodechar{≡}{\ensuremath\equiv}
 \newunicodechar{₀}{\ensuremath{_0}}
@@ -35,12 +42,13 @@
 \newunicodechar{₃}{\ensuremath{_3}}
 \newunicodechar{↝}{\ensuremath\red}
 \newunicodechar{↭}{\ensuremath\leftrightsquigarrow}
-\newunicodechar{⇒}{\ensuremath\reds}
+\newunicodechar{⇒}{\ensuremath\Rightarrow}
 \newunicodechar{⊸}{\ensuremath\multimap}
 \newunicodechar{≃}{\ensuremath\simeq}
 \newunicodechar{Γ}{\ensuremath\ContextC}
 \newunicodechar{Δ}{\ensuremath\ContextD}
 \newunicodechar{Θ}{\ensuremath\ContextE}
+\newunicodechar{∗}{\ensuremath\ast}
 \newunicodechar{∷}{\ensuremath{{::}}}
 \newunicodechar{∃}{\ensuremath\exists}
 \newunicodechar{λ}{\ensuremath\lambda}
@@ -127,7 +135,7 @@
 \input{introduction}
 \input{calculus}
 \input{agda}
-\input{Examples}
+% \input{Examples}
 \input{related}
 \input{conclusion}
 
